main/default/objects/Stage__c/Stage__c.object-meta.xml
<CustomObject>
    <description>Stage for the festival</description>
    <label>Stage</label>
    <nameField>
        <label>Nome Stage</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>