main/default/objects/Stage__c/fields/Has_piano__c.field-meta.xml
<CustomField>
    <fullName>Has_piano__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checkbox che indica se c&#39;è un piano su quel palcoscenico</description>
    <label>Has piano</label>
    <type>Checkbox</type>
</CustomField>