main/default/objects/Stage__c/fields/Main_Stage__c.field-meta.xml
<CustomField>
    <fullName>Main_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifica se il palco è il palco principale</description>
    <label>Main Stage</label>
    <type>Checkbox</type>
</CustomField>