main/default/objects/Stage__c/fields/Opening_Time__c.field-meta.xml
<CustomField>
    <fullName>Opening_Time__c</fullName>
    <description>Inizio dello spettacolo</description>
    <label>Opening Time</label>
    <type>DateTime</type>
</CustomField>