main/default/objects/Stage__c/fields/Special_equipment_available__c.field-meta.xml
<CustomField>
    <fullName>Special_equipment_available__c</fullName>
    <description>Equipaggiamento speciale disponibile per quel palcoscenico</description>
    <label>Special equipment available</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lasers</fullName>
            </value>
            <value>
                <fullName>Fog Machines</fullName>
            </value>
            <value>
                <fullName>Fireworks</fullName>
            </value>
            <value>
                <fullName>Spotlights</fullName>
            </value>
            <value>
                <fullName>Speakers</fullName>
            </value>
            <value>
                <fullName>Sub-woofers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>