main/default/objects/Stage__c/fields/Stage_Manager__c.field-meta.xml
<CustomField>
    <fullName>Stage_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person managing the Stage</description>
    <label>Stage Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Stages</relationshipName>
    <type>Lookup</type>
</CustomField>